# homeschool-backend

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  codebase.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: db.py  main.py  security.py  settings.py
app/models/: activity.py  base.py  kid.py  user.py
app/routers/: activities.py  auth.py  kids.py  rewards.py  schedule.py
app/scripts/: seed.py
scripts/: seed_data.py
svc/app/: config.py  database.py  dependencies.py  main.py  settings.py
svc/app/controllers/: activity_controller.py  auth_controller.py  family_preferences_controller.py  kid_controller.py  llm_controller.py  reward_controller.py  settings_controller.py  user_controller.py  week_activity_controller.py
svc/app/dal/: activity_manager.py  activity_repository.py  activity_suggestion_repository.py  base_repository.py  family_preference_repository.py  kid_repository.py  user_behavior_analytic_repository.py  user_repository.py  week_activity_repository.py
svc/app/data/: generic_activities.py  seed.py
svc/app/datatypes/: activity.py  auth.py  common.py  enums.py  family_preference.py  kid.py  settings.py  user.py  user_behavior_analytic.py  weather.py  week_activity.py
svc/app/helpers/: activity_helpers.py
svc/app/llm/: cache_utils.py  client.py  enum_loader.py
svc/app/models/: __init__.py  activity.py  activity_suggestion.py  activity_type.py  base.py  family_preference.py  kid.py  relationships.py  theme.py  user.py  user_behavior_analytic.py  week_activity.py
svc/app/routers/: auth.py  (+4 more)
svc/migrations/: env.py
(+50 files in other folders)
