[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeschool-backend"
version = "1.0.0"
description = "Homeschool management API"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = []

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$|\.py$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
